syntax="proto2";

package Types;

//指定命名空间（可选参数）如果没有，则使用C#代码的命名空间。
option csharp_namespace = "Proto";

message net_vector2_int {
	required sint32 x = 1;
	required sint32 y = 2;
}

message net_vector2 {
	required float x = 1;
	required float y = 2;
}

message gamer_info {
    required string uid = 1;
    required int32 id = 2;
	required string name = 3;
	required int32 camp = 4;
	required net_vector2 pos = 5;
	required float rotation = 6;
	required float moveSpeed = 7;
}